test/cli/test-validating-policy/envoy-deny/request.json
{
    "attributes": {
      "request": {
        "http": {
          "method": "GET",
          "path": "/forbidden",
          "headers": {}
        }
      }
    }
  }
